kubernetes/main/apps/default/metube/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app metube
  labels: &labels
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *labels
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - rachel
      containers:
        - name: *app
          image: ghcr.io/alexta69/metube:2026.01.10
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 67Mi
            limits:
              memory: 67Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ "ALL" ]
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8081
              name: http
          volumeMounts:
            - name: cookies
              mountPath: /cookies
            - name: downloads-1
              mountPath: /downloads-1
            - name: state
              mountPath: /state
            - name: temp
              mountPath: /tmp
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsGroup: 1000
        runAsUser: 1000
      tolerations:
        - key: nas
          operator: Equal
          value: "true"
          effect: NoSchedule
      volumes:
        - name: cookies
          secret:
            secretName: metube-patreon-cookies
        - name: downloads-1
          persistentVolumeClaim:
            claimName: metube-downloads-1
        - name: state
          persistentVolumeClaim:
            claimName: metube-state
        - name: temp
          emptyDir: {}
