kubernetes/main/apps/default/metube/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app metube
  labels: &labels
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    <<: *labels
