kubernetes/main/apps/default/metube/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app metube
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  hostnames:
    - metube.internal.denniseffing.de
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: metube
          namespace: default
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
