kubernetes/main/apps/default/metube/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.network.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2-proxy.internal.denniseffing.de/oauth2/start?rd=https://$host$uri"
  name: &app metube
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  rules:
    - host: metube.internal.denniseffing.de
      http:
        paths:
          - backend:
              service:
                name: metube
                port:
                  name: http
            pathType: ImplementationSpecific
